gateway-yamls/route/istio/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-service
  namespace: default
spec:
  hosts:
  - "sad-kistpay.com"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /service1
    route:
    - destination:
        host: service1.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /service2
    route:
    - destination:
        host: service2.default.svc.cluster.local
        port:
          number: 80



### with timeout
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: example-service
#   namespace: default
# spec:
#   hosts:
#   - "sad-kistpay.com"
#   gateways:
#   - istio-gateway
#   http:
#   - route:
#     - destination:
#         host: example-service.default.svc.cluster.local
#       timeout: 5s
#     retries:
#       attempts: 3
#       perTryTimeout: 2s
#       retryOn: gateway-error,connect-failure,refused-stream
